src/main/java/nju/ics/grammar/oclcore/OCLcoreParser.java
// Generated from OCLcore.g4 by ANTLR 4.13.2

    package nju.ics.grammar.oclcore;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class OCLcoreParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, INT_LITERAL=36, REAL_LITERAL=37, 
		STRING_LITERAL=38, NULL_LITERAL=39, NEWLINE=40, LINE_COMMENT=41, WS=42, 
		SPACE=43, ID=44, CONSTANTID=45;
	public static final int
		RULE_specification = 0, RULE_invExpr = 1, RULE_inv = 2, RULE_oclBool = 3, 
		RULE_arithmeticExpr = 4, RULE_oclArithmeticValue = 5, RULE_aggOp = 6, 
		RULE_oclSet = 7, RULE_setOp = 8, RULE_oclObject = 9, RULE_oclStringValue = 10, 
		RULE_compOp = 11, RULE_varList = 12, RULE_var = 13, RULE_fRole = 14, RULE_nfRole = 15, 
		RULE_attr = 16, RULE_roleOrAttr = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"specification", "invExpr", "inv", "oclBool", "arithmeticExpr", "oclArithmeticValue", 
			"aggOp", "oclSet", "setOp", "oclObject", "oclStringValue", "compOp", 
			"varList", "var", "fRole", "nfRole", "attr", "roleOrAttr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Model'", "':'", "'context'", "'inv'", "'not'", "'and'", "'or'", 
			"'('", "')'", "'='", "'<>'", "'.'", "'-'", "'*'", "'/'", "'+'", "'->'", 
			"'()'", "'min'", "'max'", "'sum'", "'avg'", "'size'", "'.allInstances()'", 
			"'->select'", "'|'", "'->union'", "'->intersection'", "'->difference'", 
			"'self'", "'<'", "'<='", "'>='", "'>'", "','", null, null, null, "'null'", 
			null, null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"INT_LITERAL", "REAL_LITERAL", "STRING_LITERAL", "NULL_LITERAL", "NEWLINE", 
			"LINE_COMMENT", "WS", "SPACE", "ID", "CONSTANTID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OCLcore.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OCLcoreParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecificationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(OCLcoreParser.ID, 0); }
		public TerminalNode EOF() { return getToken(OCLcoreParser.EOF, 0); }
		public List<InvExprContext> invExpr() {
			return getRuleContexts(InvExprContext.class);
		}
		public InvExprContext invExpr(int i) {
			return getRuleContext(InvExprContext.class,i);
		}
		public SpecificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specification; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitSpecification(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecificationContext specification() throws RecognitionException {
		SpecificationContext _localctx = new SpecificationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_specification);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(T__0);
			setState(37);
			match(ID);
			setState(38);
			match(T__1);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(39);
				invExpr();
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InvExprContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(OCLcoreParser.ID, 0); }
		public List<InvContext> inv() {
			return getRuleContexts(InvContext.class);
		}
		public InvContext inv(int i) {
			return getRuleContext(InvContext.class,i);
		}
		public InvExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_invExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitInvExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InvExprContext invExpr() throws RecognitionException {
		InvExprContext _localctx = new InvExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_invExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(T__2);
			setState(48);
			match(ID);
			setState(50); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(49);
				inv();
				}
				}
				setState(52); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__3 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InvContext extends ParserRuleContext {
		public OclBoolContext oclBool() {
			return getRuleContext(OclBoolContext.class,0);
		}
		public TerminalNode ID() { return getToken(OCLcoreParser.ID, 0); }
		public InvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inv; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitInv(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InvContext inv() throws RecognitionException {
		InvContext _localctx = new InvContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_inv);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__3);
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(55);
				match(ID);
				}
			}

			setState(58);
			match(T__1);
			setState(59);
			oclBool(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OclBoolContext extends ParserRuleContext {
		public OclBoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oclBool; }
	 
		public OclBoolContext() { }
		public void copyFrom(OclBoolContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OclBoolNotContext extends OclBoolContext {
		public OclBoolContext oclBool() {
			return getRuleContext(OclBoolContext.class,0);
		}
		public OclBoolNotContext(OclBoolContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitOclBoolNot(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OclBoolParenContext extends OclBoolContext {
		public OclBoolContext oclBool() {
			return getRuleContext(OclBoolContext.class,0);
		}
		public OclBoolParenContext(OclBoolContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitOclBoolParen(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OclBoolAndContext extends OclBoolContext {
		public List<OclBoolContext> oclBool() {
			return getRuleContexts(OclBoolContext.class);
		}
		public OclBoolContext oclBool(int i) {
			return getRuleContext(OclBoolContext.class,i);
		}
		public OclBoolAndContext(OclBoolContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitOclBoolAnd(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OclBoolOrContext extends OclBoolContext {
		public List<OclBoolContext> oclBool() {
			return getRuleContexts(OclBoolContext.class);
		}
		public OclBoolContext oclBool(int i) {
			return getRuleContext(OclBoolContext.class,i);
		}
		public OclBoolOrContext(OclBoolContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitOclBoolOr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OclBoolObjectAttrContext extends OclBoolContext {
		public OclObjectContext oclObject() {
			return getRuleContext(OclObjectContext.class,0);
		}
		public AttrContext attr() {
			return getRuleContext(AttrContext.class,0);
		}
		public OclBoolObjectAttrContext(OclBoolContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitOclBoolObjectAttr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EqualityExprStringEqualContext extends OclBoolContext {
		public Token op;
		public List<OclStringValueContext> oclStringValue() {
			return getRuleContexts(OclStringValueContext.class);
		}
		public OclStringValueContext oclStringValue(int i) {
			return getRuleContext(OclStringValueContext.class,i);
		}
		public EqualityExprStringEqualContext(OclBoolContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitEqualityExprStringEqual(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EqualityExprArithmeticContext extends OclBoolContext {
		public List<ArithmeticExprContext> arithmeticExpr() {
			return getRuleContexts(ArithmeticExprContext.class);
		}
		public ArithmeticExprContext arithmeticExpr(int i) {
			return getRuleContext(ArithmeticExprContext.class,i);
		}
		public CompOpContext compOp() {
			return getRuleContext(CompOpContext.class,0);
		}
		public EqualityExprArithmeticContext(OclBoolContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitEqualityExprArithmetic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OclBoolContext oclBool() throws RecognitionException {
		return oclBool(0);
	}

	private OclBoolContext oclBool(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		OclBoolContext _localctx = new OclBoolContext(_ctx, _parentState);
		OclBoolContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_oclBool, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				_localctx = new OclBoolNotContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(62);
				match(T__4);
				setState(63);
				oclBool(7);
				}
				break;
			case 2:
				{
				_localctx = new OclBoolParenContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(64);
				match(T__7);
				setState(65);
				oclBool(0);
				setState(66);
				match(T__8);
				}
				break;
			case 3:
				{
				_localctx = new EqualityExprArithmeticContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(68);
				arithmeticExpr(0);
				setState(69);
				compOp();
				setState(70);
				arithmeticExpr(0);
				}
				break;
			case 4:
				{
				_localctx = new EqualityExprStringEqualContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(72);
				oclStringValue();
				setState(73);
				((EqualityExprStringEqualContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__9 || _la==T__10) ) {
					((EqualityExprStringEqualContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(74);
				oclStringValue();
				}
				break;
			case 5:
				{
				_localctx = new OclBoolObjectAttrContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(76);
				oclObject(0);
				setState(77);
				match(T__11);
				setState(78);
				attr();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(90);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(88);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new OclBoolAndContext(new OclBoolContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_oclBool);
						setState(82);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(83);
						match(T__5);
						setState(84);
						oclBool(7);
						}
						break;
					case 2:
						{
						_localctx = new OclBoolOrContext(new OclBoolContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_oclBool);
						setState(85);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(86);
						match(T__6);
						setState(87);
						oclBool(6);
						}
						break;
					}
					} 
				}
				setState(92);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArithmeticExprContext extends ParserRuleContext {
		public ArithmeticExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmeticExpr; }
	 
		public ArithmeticExprContext() { }
		public void copyFrom(ArithmeticExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArithParenContext extends ArithmeticExprContext {
		public ArithmeticExprContext arithmeticExpr() {
			return getRuleContext(ArithmeticExprContext.class,0);
		}
		public ArithParenContext(ArithmeticExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitArithParen(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArithUnaryMinusContext extends ArithmeticExprContext {
		public ArithmeticExprContext arithmeticExpr() {
			return getRuleContext(ArithmeticExprContext.class,0);
		}
		public ArithUnaryMinusContext(ArithmeticExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitArithUnaryMinus(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArithMultDivContext extends ArithmeticExprContext {
		public Token op;
		public List<ArithmeticExprContext> arithmeticExpr() {
			return getRuleContexts(ArithmeticExprContext.class);
		}
		public ArithmeticExprContext arithmeticExpr(int i) {
			return getRuleContext(ArithmeticExprContext.class,i);
		}
		public ArithMultDivContext(ArithmeticExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitArithMultDiv(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArithAddSubContext extends ArithmeticExprContext {
		public Token op;
		public List<ArithmeticExprContext> arithmeticExpr() {
			return getRuleContexts(ArithmeticExprContext.class);
		}
		public ArithmeticExprContext arithmeticExpr(int i) {
			return getRuleContext(ArithmeticExprContext.class,i);
		}
		public ArithAddSubContext(ArithmeticExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitArithAddSub(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArithValueContext extends ArithmeticExprContext {
		public OclArithmeticValueContext oclArithmeticValue() {
			return getRuleContext(OclArithmeticValueContext.class,0);
		}
		public ArithValueContext(ArithmeticExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitArithValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArithmeticExprContext arithmeticExpr() throws RecognitionException {
		return arithmeticExpr(0);
	}

	private ArithmeticExprContext arithmeticExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ArithmeticExprContext _localctx = new ArithmeticExprContext(_ctx, _parentState);
		ArithmeticExprContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_arithmeticExpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__12:
				{
				_localctx = new ArithUnaryMinusContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(94);
				match(T__12);
				setState(95);
				arithmeticExpr(5);
				}
				break;
			case T__7:
				{
				_localctx = new ArithParenContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(96);
				match(T__7);
				setState(97);
				arithmeticExpr(0);
				setState(98);
				match(T__8);
				}
				break;
			case T__29:
			case INT_LITERAL:
			case REAL_LITERAL:
			case STRING_LITERAL:
			case ID:
				{
				_localctx = new ArithValueContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(100);
				oclArithmeticValue();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(109);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new ArithMultDivContext(new ArithmeticExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_arithmeticExpr);
						setState(103);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(104);
						((ArithMultDivContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==T__13 || _la==T__14) ) {
							((ArithMultDivContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(105);
						arithmeticExpr(5);
						}
						break;
					case 2:
						{
						_localctx = new ArithAddSubContext(new ArithmeticExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_arithmeticExpr);
						setState(106);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(107);
						((ArithAddSubContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==T__12 || _la==T__15) ) {
							((ArithAddSubContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(108);
						arithmeticExpr(4);
						}
						break;
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OclArithmeticValueContext extends ParserRuleContext {
		public OclArithmeticValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oclArithmeticValue; }
	 
		public OclArithmeticValueContext() { }
		public void copyFrom(OclArithmeticValueContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArithSetAggFuncContext extends OclArithmeticValueContext {
		public OclSetContext oclSet() {
			return getRuleContext(OclSetContext.class,0);
		}
		public AggOpContext aggOp() {
			return getRuleContext(AggOpContext.class,0);
		}
		public ArithSetAggFuncContext(OclArithmeticValueContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitArithSetAggFunc(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArithValueAttrContext extends OclArithmeticValueContext {
		public OclObjectContext oclObject() {
			return getRuleContext(OclObjectContext.class,0);
		}
		public AttrContext attr() {
			return getRuleContext(AttrContext.class,0);
		}
		public ArithValueAttrContext(OclArithmeticValueContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitArithValueAttr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArithValueIntLiteralContext extends OclArithmeticValueContext {
		public TerminalNode INT_LITERAL() { return getToken(OCLcoreParser.INT_LITERAL, 0); }
		public ArithValueIntLiteralContext(OclArithmeticValueContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitArithValueIntLiteral(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArithValueRealLiteralContext extends OclArithmeticValueContext {
		public TerminalNode REAL_LITERAL() { return getToken(OCLcoreParser.REAL_LITERAL, 0); }
		public ArithValueRealLiteralContext(OclArithmeticValueContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitArithValueRealLiteral(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArithValueVarContext extends OclArithmeticValueContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public ArithValueVarContext(OclArithmeticValueContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OCLcoreVisitor ) return ((OCLcoreVisitor<? extends T>)visitor).visitArithValueVar(this);
			else return visitor.visitChildren(this);
		}
	}
